--- a/css/style.css
+++ b/css/style.css
@@ -157,4 +157,15 @@ section .contactForm .info .textBox .infoContact p {
   font-size: x-large;
 }
 
+@media (max-width: 600px) {
+  .recipe {
+    grid-template-columns: 1fr;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  section .contactForm {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
