--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,4 @@
 @import 'components/productos';
 @import 'components/producto-info';
 @import 'components/form-trabajaconmigo';
+@import 'base/mquery'
