--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,4 +9,5 @@
 @import 'components/productos';
 @import 'components/producto-info';
 @import 'components/form-trabajaconmigo';
-@import 'base/mquery'
+@import 'components/recetas';
+@import 'base/mquery';
